[gd_scene load_steps=20 format=2]

[ext_resource path="res://Controls/XP1.png" type="Texture" id=1]
[ext_resource path="res://Controls/X1.png" type="Texture" id=2]
[ext_resource path="res://Controls/DownP1.png" type="Texture" id=3]
[ext_resource path="res://Controls/LeftP1.png" type="Texture" id=4]
[ext_resource path="res://Controls/Left1.png" type="Texture" id=5]
[ext_resource path="res://Controls/UpP1.png" type="Texture" id=6]
[ext_resource path="res://Controls/Down1.png" type="Texture" id=7]
[ext_resource path="res://Controls/Right1.png" type="Texture" id=8]
[ext_resource path="res://Controls/Up1.png" type="Texture" id=9]
[ext_resource path="res://Controls/RightP1.png" type="Texture" id=10]
[ext_resource path="res://Controls/Z1.png" type="Texture" id=11]
[ext_resource path="res://Controls/ZP1.png" type="Texture" id=12]
[ext_resource path="res://Controls/CP1.png" type="Texture" id=13]
[ext_resource path="res://Controls/C1.png" type="Texture" id=14]
[ext_resource path="res://Controls/spr_joybase2.png" type="Texture" id=15]
[ext_resource path="res://Controls/joystick2.png" type="Texture" id=16]
[ext_resource path="res://Controls/upanalog.png" type="Texture" id=17]
[ext_resource path="res://Scripts/TouchScreenButton.gd" type="Script" id=18]
[ext_resource path="res://Scripts/CanvasLayer.gd" type="Script" id=27]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 27 )

[node name="DownButton" type="TouchScreenButton" parent="."]
position = Vector2( 212.836, 384.283 )
scale = Vector2( 2, 2 )
normal = ExtResource( 9 )
pressed = ExtResource( 6 )
passby_press = true

[node name="LeftButton" type="TouchScreenButton" parent="."]
position = Vector2( 129, 344.283 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
pressed = ExtResource( 8 )
passby_press = true

[node name="RightButton" type="TouchScreenButton" parent="."]
position = Vector2( 253, 344.283 )
scale = Vector2( 2, 2 )
normal = ExtResource( 5 )
pressed = ExtResource( 4 )
passby_press = true

[node name="UpButton" type="TouchScreenButton" parent="."]
position = Vector2( 212.836, 266 )
scale = Vector2( 2, 2 )
normal = ExtResource( 7 )
pressed = ExtResource( 3 )
passby_press = true

[node name="ZButton" type="TouchScreenButton" parent="."]
position = Vector2( 646, 424 )
scale = Vector2( 2, 2 )
normal = ExtResource( 11 )
pressed = ExtResource( 12 )
passby_press = true

[node name="XButton" type="TouchScreenButton" parent="."]
position = Vector2( 722, 365 )
scale = Vector2( 2, 2 )
normal = ExtResource( 2 )
pressed = ExtResource( 1 )
passby_press = true

[node name="CButton" type="TouchScreenButton" parent="."]
position = Vector2( 798, 305.717 )
scale = Vector2( 2, 2 )
normal = ExtResource( 14 )
pressed = ExtResource( 13 )
passby_press = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -226, 123 )

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 476, 260 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="Node2D/Sprite"]
position = Vector2( -20.9114, -21 )
scale = Vector2( 0.99578, 1 )
normal = ExtResource( 16 )
script = ExtResource( 18 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="Node2D"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -74, -133.554 )
scale = Vector2( 6.01428, 5.35241 )
normal = ExtResource( 17 )
pressed = ExtResource( 17 )
passby_press = true

[node name="TouchScreenButton2" type="TouchScreenButton" parent="Node2D"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -138, 309 )
scale = Vector2( 6.47143, 4.09817 )
normal = ExtResource( 17 )
pressed = ExtResource( 17 )
passby_press = true

[node name="TouchScreenButton3" type="TouchScreenButton" parent="Node2D"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -54, -125.423 )
scale = Vector2( 3.42857, 9.74135 )
normal = ExtResource( 17 )
pressed = ExtResource( 17 )
passby_press = true

[node name="TouchScreenButton4" type="TouchScreenButton" parent="Node2D"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 522, -135 )
scale = Vector2( 1.74999, 11.4631 )
normal = ExtResource( 17 )
pressed = ExtResource( 17 )
passby_press = true

[connection signal="pressed" from="DownButton" to="." method="_on_DownButton_pressed"]
[connection signal="released" from="DownButton" to="." method="_on_DownButton_released"]
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="released" from="LeftButton" to="." method="_on_LeftButton_released"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="released" from="RightButton" to="." method="_on_RightButton_released"]
[connection signal="pressed" from="UpButton" to="." method="_on_UpButton_pressed"]
[connection signal="released" from="UpButton" to="." method="_on_UpButton_released"]
[connection signal="pressed" from="ZButton" to="." method="_on_ZButton_pressed"]
[connection signal="released" from="ZButton" to="." method="_on_ZButton_released"]
[connection signal="pressed" from="XButton" to="." method="_on_XButton_pressed"]
[connection signal="released" from="XButton" to="." method="_on_XButton_released"]
[connection signal="pressed" from="CButton" to="." method="_on_CButton_pressed"]
[connection signal="released" from="CButton" to="." method="_on_CButton_released"]
[connection signal="pressed" from="Node2D/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="Node2D/TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="pressed" from="Node2D/TouchScreenButton2" to="." method="_on_TouchScreenButton2_pressed"]
[connection signal="released" from="Node2D/TouchScreenButton2" to="." method="_on_TouchScreenButton2_released"]
[connection signal="pressed" from="Node2D/TouchScreenButton3" to="." method="_on_TouchScreenButton3_pressed"]
[connection signal="released" from="Node2D/TouchScreenButton3" to="." method="_on_TouchScreenButton3_released"]
[connection signal="pressed" from="Node2D/TouchScreenButton4" to="." method="_on_TouchScreenButton4_pressed"]
[connection signal="released" from="Node2D/TouchScreenButton4" to="." method="_on_TouchScreenButton4_released"]
